# nitro-oprf

./: .gitignore  Cargo.toml  README.md  enclave.Dockerfile
common/: Cargo.toml
common/src/: lib.rs
enclave/: Cargo.toml
enclave/src/: main.rs
parent/: Cargo.toml
parent/src/: main.rs
scripts/: build_enclave.sh  run_local.sh
tdx-oprf/: Cargo.toml  README.md
tdx-oprf/common/: Cargo.toml
tdx-oprf/common/src/: lib.rs
tdx-oprf/enclave/: Cargo.toml
tdx-oprf/enclave/src/: main.rs
tdx-oprf/parent/: Cargo.toml
tdx-oprf/parent/src/: main.rs
tdx-oprf/scripts/: run_local.sh  run_tdx.sh
