[workspace]
members = ["common", "enclave", "parent"]
resolver = "2"

[workspace.dependencies]
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"