[package]
name = "oprf-enclave"
version = "0.1.0"
edition = "2021"

[features]
default = ["local"]
local = []
nitro = ["aws-nitro-enclaves-nsm-api"]

[dependencies]
oprf-common = { path = "../common" }
ark-bn254. workspace = true
ark-ec. workspace = true
ark-ff. workspace = true
ark-serialize. workspace = true
ark-std. workspace = true
serde.workspace = true
serde_json. workspace = true
rand.workspace = true
sha2. workspace = true
hex.workspace = true

# Nitro-specific dependencies
aws-nitro-enclaves-nsm-api = { version = "0.4", optional = true }
nix = { version = "0.27", features = ["socket"] }
serde_cbor = "0.11"