[package]
name = "tdx-oprf-enclave"
version = "0.1.0"
edition = "2021"

[features]
default = ["local"]
local = []
tdx = ["nix"]
tdx-local = ["tempfile"]

[dependencies]
tdx-oprf-common = { path = "../common" }
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
nix = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
